src/styles/aboutme.scss
@import './_partials/_vars.scss';
@import './_partials/_defaults.scss';
@import './_partials/_flexbox.scss';
@import './_partials/_mixins.scss';
@import './_partials/_menu.scss';
@import './_partials/_theme.scss';
@import './_partials/_icons.scss';

.site-header {
  color: theme($websiteTheme, text);
  background: theme($websiteTheme, background);
  padding: 5em;
  text-align: center;
}

.position-title {
  font-weight: 400;
}

.social {
  .icon {
    display: inline-block;
    width: 1.8em;
    height: 1.8em;
    fill: theme($websiteTheme, text);
    margin-right: 1em;
    transition: fill 0.2s ease-in-out;
  }
}

.section-subtitle,
.section-title {
  text-align: center;
  font-weight: 400;
}

.section-subtitle {
  font-weight: 300;
  color: theme($websiteTheme, linksHover);
}

.aboutme {
  background-color: theme($websiteTheme, backgroundSurface);
  color: theme($websiteTheme, text);

  h1 {
    padding: 0;
  }

  .social {
    margin-top: 1.5em;
  }

  .icon {
    width: 1.5em;
    height: 1.5em;
  }
}

.profile-item {
  padding: 0.35em 0;
}

.my-name {
  color: theme($websiteTheme, primary);
}

.award-card,
.education-card,
.job-card {
  margin: 2.5em 0;
  display: flex;
}

.job {
  flex: 1;
  padding: 0 1em;
}

.cv-position-title {
  padding-right: 2em;
  font-weight: 700;
}

.job-header {
  padding-bottom: 0.75em;
}

.end,
.start {
  padding-bottom: 0.5em;
  font-weight: 300;
}

.company,
.end,
.start {
  font-weight: 300;
}

.end {
  margin-left: 0.25em;
}

.position {
  font-weight: 400;
  padding: 0.5em 0;
}

.company-name {
  font-weight: 300;
  margin-bottom: 0;
}

.icon-award,
.icon-education {
  width: 2.5em;
  height: 2.5em;
  display: block;
  padding-bottom: 0.75em;
}

.icon-education {
  fill: $web;
}

.icon-award {
  fill: $stars;
}

.duration {
  display: flex;
  padding: 1.5em;
  text-align: center;
  align-items: center;
}

.roles {
  padding: 0 0.65em;
  align-items: center;
}

.dates {
  display: flex;
  font-size: 1.15em;
}

.duration h2 {
  padding: 1.5em 1em;
  display: flex;
  align-items: center;
  color: theme($websiteTheme, textOnPrimary);
  border-radius: 2px;
  font-weight: 700;
  font-size: 1.5em;
  background-color: theme($websiteTheme, primary);
  box-shadow: 0 0.5em 1.5em rgba(255, 82, 82, .45);
}

.duration.grade-duration h2 {
  padding: 1.5em;
}

.skills-list {
  padding: 0 1.5em;
}

.skill {
  padding: 1em 0;
}

.bar,
.progress-bar {
  height: 4px;
  border-radius: 4px;
}

.progress-bar {
  position: relative;
  width: 100%;
  z-index: 10;
  top: 0;
  background-color: theme($websiteTheme, backgroundSurface);
}

.bar {
  width: 30%;
  background-color: theme($websiteTheme, primary);
  box-shadow: 0 0 10px theme($websiteTheme, primary);
}

.award {
  background-color: theme($websiteTheme, secondary);
  padding: 2em;
  margin: 0 2em;
  text-align: center;
  border-radius: 2px;
  color: theme($websiteTheme, textOnPrimary);
  box-shadow: 0 0.5em 1.5em rgba(theme($websiteTheme, secondary), .45);
}

.award-title {
  font-weight: 700;
  margin-bottom: 0.5em;
}

.award-project {
  font-weight: 300;
  margin-bottom: 1em;
}

.profile {
  padding-top: 1.5em;
}

.country {
  font-size: 2.25em;
  font-family: "Apple Color Emoji", "Segoe UI Emoji", "NotoColorEmoji", "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
  margin: 0 0.15em;
  cursor: pointer;
}

footer {
  color: theme($websiteTheme, text);
  background-color: theme($websiteTheme, backgroundSurface);
  padding: 3em 1.5em;
  text-align: left;

  .social {
    text-align: right;
  }

  h3 {
    font-weight: 700;
    color: theme($websiteTheme, text);
  }
}

.footer-navigation {
  padding: 0;
  margin: 0;

  li {
    display: inline-block;
    padding-right: 0.95em;
    font-size: 0.75em;
    text-transform: uppercase;
  }
}

@include mediaUpToXtraSmallDevices {
  .site-header {
    padding: 5em 1.5em;
  }

  .about {
    display: block;
  }

  .site-header h1 {
    font-size: 3.25em;
  }

  .position {
    font-size: 2em;
  }

  footer {
    padding: 1.5em 0.5em;
  }

  footer,
  footer .social {
    text-align: center;
  }
}

@media(max-width: 1125px) {
  .duration {
    display: none;
  }

  .job-card {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
    box-shadow: 0 1px 2px rgba(theme($websiteTheme, shadowColor), 0.15);
    padding: 2em;
  }
}

@include mediaUpToMobileDevices {
  .site-header h1 {
    font-size: 2.95em;
  }

  .position {
    font-size: 1.75em;
  }

  body,
  html {
    font-size: 15px;
  }
}

